--- a/TF_Machine.ipynb
+++ b/TF_Machine.ipynb
@@ -554,6 +554,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DRAW THE STUPID GRAPH FROM THESE ACTIVATION FUNCTIONS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
